--- a/todoProject/src/app/registration/registration.component.html
+++ b/todoProject/src/app/registration/registration.component.html
@@ -1,36 +1,63 @@
 <div class="row">
 	<div class="col-sm-6">
-		<button class="btn btn-block btn-primary" (click)=toggle()>SignIn</button>
+		<button class="btn btn-block btn-primary" (click)=toggle(0)>SignIn</button>
 	</div>
 	<div class="col-sm-6">
-		<button class="btn btn-block btn-primary" (click)=toggle()>SignUp</button>
+		<button class="btn btn-block btn-primary" (click)=toggle(1)>SignUp</button>
 	</div>
 </div>
 
-<form *ngIf="formValue">
+<form *ngIf="formValue" name="form" #oneForm="ngForm">
   <div class="form-group">
     <label for="email">Email address:</label>
-    <input type="email" class="form-control" name="email" [(ngModel)]="signIn.email">
+    <input type="email" class="form-control" name="email" [(ngModel)]="signIn.email" required #email="ngModel" [ngClass]="{ 'is-invalid': email.invalid && email.touched}" email/>
+      <div *ngIf="email.invalid && email.touched" class="invalid-feedback">
+          <div *ngIf="email.errors.required">Email is required</div>
+          <div *ngIf="email.errors.email">Email must be a valid email address</div>
+      </div>
   </div>
   <div class="form-group">
     <label for="pwd">Password:</label>
-    <input type="password" class="form-control" name="pwd" [(ngModel)]="signIn.pwd">
+    <input type="password" class="form-control" name="pwd" [(ngModel)]="signIn.pwd" required #pwd="ngModel" [ngClass]="{ 'is-invalid': pwd.invalid && pwd.touched}" minlength="8">
+    <div *ngIf="pwd.invalid && pwd.touched" class="invalid-feedback">
+          <div *ngIf="pwd.errors.required">Password is required</div>
+          <div *ngIf="pwd.errors.minlength">Mininum Length should be 8 digit</div>
+      </div>
   </div>
-  <button type="submit" class="btn btn-default" (click)="signInButton()">SignIn</button>
+  <button type="submit" [disabled]="oneForm.form.invalid" class="btn btn-default" (click)="signInButton()">SignIn</button>
 </form>
-
-<form *ngIf="!formValue">
-	<div class="form-group">
+<div *ngIf="!formValue">
+  <form name="form" #twoForm="ngForm" >
+  <div class="form-group">
     <label for="user">User Name:</label>
-    <input type="text" class="form-control" name="user" [(ngModel)]="signUp.user">
+    <input type="text" class="form-control" name="user" [(ngModel)]="signUp.user" required minlength="4" #name="ngModel" [ngClass]="{ 'is-invalid': name.invalid && (name.dirty || name.touched)}">
+      <div *ngIf="name.invalid && (name.dirty || name.touched)" class="invalid-feedback">
+        <div *ngIf="name.errors.required">
+          Name is required.
+        </div>
+        <div *ngIf="name.errors.minlength">
+          Name must be at least 4 characters long.
+        </div>
+      </div>
   </div>
   <div class="form-group">
     <label for="email">Email address:</label>
-    <input type="email" class="form-control" name="email" [(ngModel)]="signUp.email">
+    <input type="email" class="form-control" name="email" [(ngModel)]="signUp.email" required #email="ngModel" [ngClass]="{ 'is-invalid': email.invalid && email.touched}" email/>
+      <div *ngIf="email.invalid && email.touched" class="invalid-feedback">
+          <div *ngIf="email.errors.required">Email is required</div>
+          <div *ngIf="email.errors.email">Email must be a valid email address</div>
+      </div>
   </div>
   <div class="form-group">
-    <label for="pwd">Password:</label>
-    <input type="password" class="form-control" name="pwd" [(ngModel)]="signUp.pwd">
+    <label for="pwd">Password</label>
+    <input type="password" class="form-control" name="pwd" [(ngModel)]="signUp.pwd" required #pwd="ngModel" [ngClass]="{ 'is-invalid': pwd.invalid && pwd.touched}" minlength="8">
+    <div *ngIf="pwd.invalid && pwd.touched" class="invalid-feedback">
+          <div *ngIf="pwd.errors.required">Password is required</div>
+          <div *ngIf="pwd.errors.minlength">Mininum Length should be 8 digit</div>
+      </div>
   </div>
-  <button type="submit" class="btn btn-default" (click)="signUpButton()">SignUp</button>
+
+    <button type="submit" [disabled]="twoForm.form.invalid" class="btn btn-default" (click)="signUpButton()">SignUp</button>
+  
 </form>
+</div>
