--- a/Infilect's Task/style/style.css
+++ b/Infilect's Task/style/style.css
@@ -20,3 +20,41 @@ body{
 .totalDetails{
 	text-align: center;
 }
+.clickable{
+	cursor: pointer;
+}
+.conta:hover .image {
+  cursor: pointer;
+}
+.conta{
+   cursor: pointer;
+}
+.conta:hover .caption {
+  opacity: 1;
+}
+  .conta{
+   opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+  }
+  .caption {
+  	width: 90%;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+.caption p{
+color:white;
+}
+.ellips{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+}
