--- a/Infilect's Task/template/overview.html
+++ b/Infilect's Task/template/overview.html
@@ -1,7 +1,7 @@
 <div ng-controller="overviewCtrl">
-
+<h3 style="text-align: center">{{title}}</h3>
 	<div class="chartPie">
-		<canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options">
+		<canvas id="pie" class="chart chart-pie" chart-data="data" chart-labels="labels" chart-options="options" chart-colors="colors">
 	</canvas> 
 	</div>
 </div>
